resourceWithVars.tf
provider "aws" {
  access_key = "AKIA3OH2SKDUYLIGURX7"
  secret_key = "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"
  region     = "ap-south-1"

}
/*resource "aws_instance" "VarInstace" {
    ami =  var.AMI
    instance_type =var.EC2Type
    tags = {
      "Name" = "VariablesEC2"
    }
  
}
*/
